version increment to 0.1.5 (#124) (#125)
improve quality gate
spotbugs checks
checkstyle and pmd
updated local run profiles